# MoralesCuadrado_Baird_TCST2025

./: README.md  environment.yml
src/blimp_mpc_fbl_nr/: package.xml  setup.cfg  setup.py
src/blimp_mpc_fbl_nr/blimp_mpc_fbl_nr/: BlimpLogger.py  CtrlWardi.py  blimp_jax.py  quad_jax.py  run_blimp_sim.py
src/blimp_mpc_fbl_nr/data_analysis/: blimp_data_analysis.ipynb  utils.py
src/quad_mpc/: package.xml  setup.cfg  setup.py
src/quad_mpc/quad_mpc/: Logger.py  Tips.md  mpc_quad.py  workingGenMPC.py  workingModel.py
src/quad_mpc/quad_mpc/data_analysis/: quad_mpc_data_analysis.ipynb  utils.py
src/quad_newton_raphson_flow/: package.xml  setup.cfg  setup.py
src/quad_newton_raphson_flow/quad_newton_raphson_flow/: Logger.py  Tips.md  nr_flow_quad.py  nr_flow_quad_utilities.py
src/quad_newton_raphson_flow/quad_newton_raphson_flow/data_analysis/: quad_nr_data_analysis.ipynb  utils.py
