<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blimp_mpc_fbl_nr</name>
  <version>0.0.0</version>
  <description>NMPC, FBL, and Newton-Raphson Flow for GT-MAB</description>
  <maintainer email="egm@gatech.edu">Evanns Morales-Cuadrado</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <depend>gurobipy</depend>
  <depend>gurobi</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
